--- a/probarcosas.html
+++ b/probarcosas.html
@@ -6,18 +6,29 @@
     <title></title>
     <link href="css/style.css" rel="stylesheet">
   </head>
+  <!--Todo: varias cosas las cuales me gustaria hacer, tengo pensado crear 3 paginas, 1 la de inicio, pensada como tipo pc? pero no identico, quiero que tenga algo de personalidad sort off
+  1: lo primero que hare es hacer los iconos para las paginas, de momento dos iconos, para los bookmarks y para las noticias 
+  2: darle una interfaz tipo ventana, la cual esta la estructura en ventana ventana_completa pero le hace falta los iconos y demas
+  3: en bookmarks agregar ciertos iconos representativos, quizas sacar el de la misma pagina, pero que esten divididos por carpetas.
+  4: en las noticias, me gustaria que este la noticia en si, pero quiero que tambien me aparezca un mini resumen mio, ahi ya vere al agregar contenido, pero sera probablemente cosas importantes, maybe
+  5: quiero agregar cosas randoms, que haya por ejemplo un basurero con gifs, o mini easter eggs-->
   <body>
-    <div>
-      <div id="Botones">
-        <button type=""> 
+    <header>
+      <div id="div_header">
+        <h1 id="titulo">Neicx Page</h1>
+      </div>
+    </header>
+    <div id="ventana_completa">
+      <div id="botones_windows">
+        <button type=""id="boton_minimizar"> 
     </button>
-    <button type=""> 
+    <button type="" id="boton_maximizar"> 
     </button>
-    <button type=""> 
+    <button type=""id="boton_cerrar"> 
     </button>
-        <div>
-        hola soy una ventana
-        </div>
+      </div>
+    <div id='contenidos'>
+     <h3>aca deberia haber contenido jeje</h3>
       </div>
     </div>
   </body>
